--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -4,4 +4,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <p>This is a demo-news-app for testing purposes</p>
+  <p>The API used can be found at
+    <a href="https://newsapi.org/s/romania-news-api">API LINK</a>
+  </p>
+</ion-content>
