--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -10,13 +10,13 @@
   <ion-list>
     <ion-list-header>
       <ion-label>
-        Follow us on Twitter
+        Follow me on Github
       </ion-label>
     </ion-list-header>
     <ion-item>
       <ion-label>
         <ion-icon name="logo-ionic" slot="start"></ion-icon>
-        @ionicframework
+        https://github.com/alexmnl88
       </ion-label>
     </ion-item>
   </ion-list>
